# NxpCarInterface

./: CMakeLists.txt  NxpCarInterface.sln
NxpCarInterface/: NxpCarInterface.cpp  NxpCarInterface.h  NxpCarInterface.qrc  NxpCarInterface.rc  NxpCarInterface.ui  NxpCarInterface.vcxproj  NxpCarInterface.vcxproj.filters  NxpDefines.h  NxpImage.cpp  NxpImage.h  Region.h  UDPClient.cpp  UDPClient.h  main.cpp  s_data.h
NxpCarInterface/GeneratedFiles/: qrc_NxpCarInterface.cpp  ui_NxpCarInterface.h
cmake/: MacroOpenCV.cmake
cmake/modules_opencv/: FindOpenCV.cmake
